--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="telegrambots-3.6-jar-with-dependencies.jar"/>
+	<classpathentry exported="true" kind="lib" path="telegrambots-3.6-jar-with-dependencies.jar"/>
 	<classpathentry kind="lib" path="src/javaFlacEncoder-0.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
