--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="telegrambots-3.6-jar-with-dependencies.jar"/>
-	<classpathentry kind="lib" path="src/javaFlacEncoder-0.3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="src/javaFlacEncoder-0.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
