--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="jarvisReborn/NewJFrame.java" kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="telegrambots-3.6-jar-with-dependencies.jar"/>
 	<classpathentry exported="true" kind="lib" path="src/javaFlacEncoder-0.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
