plot for LedOut Data

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ scripts/raw/*
 scripts/processed/denoised/*
 scripts/processed/labelled_data/*
 scripts/processed/labels/*
+scripts/processed_backup/*
+script/disjoint/*
