--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,16 @@
 	<classpathentry kind="lib" path="jcommon-1.0.8.jar"/>
 	<classpathentry kind="lib" path="jfreechart.jar"/>
 	<classpathentry kind="lib" path="xchart-3.6.0.jar"/>
+	<classpathentry kind="lib" path="converter-jackson-2.7.1.jar"/>
+	<classpathentry kind="lib" path="converter-moshi-2.7.1.jar"/>
+	<classpathentry kind="lib" path="influxdb-java-2.18-SNAPSHOT-javadoc.jar"/>
+	<classpathentry kind="lib" path="influxdb-java-2.18-SNAPSHOT-sources.jar"/>
+	<classpathentry kind="lib" path="influxdb-java-2.18-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="logging-interceptor-3.3.1.jar"/>
+	<classpathentry kind="lib" path="moshi-1.8.0.jar"/>
+	<classpathentry kind="lib" path="okhttp-3.14.4.jar"/>
+	<classpathentry kind="lib" path="okio-1.16.0.jar"/>
+	<classpathentry kind="lib" path="retrofit-2.7.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JFX"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
