--- a/credentials.yml
+++ b/credentials.yml
@@ -28,8 +28,8 @@ rest:
 #  pw: "<bot token>"
 #  webhook_url: "<callback URL>"
 
-# rasa:
-#   url: "http://0.0.0.0:5002/api"
+rasa:
+  url: "http://localhost:5002/api"
 callback:
   # URL to which Core will send the bot responses
   url: "http://127.0.0.1:6901/chat"
